plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}
jar{
	enabled = false	// plain jar 생성 x
}

springBoot {
	mainClass = 'com.se.Tlog.TlogApplication'  // Spring Boot 3.x에서는 이렇게 설정
}

bootJar {
	archiveBaseName = 'tlog'
	version = '0.0.1-SNAPSHOT'
}

group = 'com.se'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'


	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
	
	implementation 'com.google.api-client:google-api-client:2.2.0'
	implementation 'com.google.firebase:firebase-admin:9.4.3'

	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	implementation 'org.projectlombok:lombok'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	testImplementation 'com.jayway.jsonpath:json-path'
	testImplementation 'org.springframework:spring-test'
	
	testAnnotationProcessor 'org.projectlombok:lombok'

	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	testImplementation 'org.springframework.amqp:spring-rabbit-test'
	implementation 'org.springframework.boot:spring-boot-starter-amqp'

}

tasks.named('test') {
	useJUnitPlatform()
}
